# Fenix

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  gen-project.sh
Fenix/: CMakeLists.txt
Fenix-Editor/: CMakeLists.txt  EditorLayer.cc  EditorLayer.hh  FenixEditorApp.cc  editor_layer.cc  editor_layer.hh  fenix_editor_app.cc  imgui.ini
Fenix-Editor/Panels/: SceneHierarchyPanel.cc  SceneHierarchyPanel.hh
Fenix-Editor/assets/shaders/: texture_and_color.glsl
Fenix-Editor/src/: editor_layer.cc  editor_layer.hh
Fenix-Editor/src/panels/: scene_hierarchy_panel.cc  scene_hierarchy_panel.hh
Fenix/include/Fenix/: Fenix.hh  version.hh
Fenix/include/Fenix/Core/: Application.hh  Base.hh  EntryPoint.hh  Input.hh  KeyCodes.hh  Layer.hh  LayerStack.hh  Log.hh  MouseCodes.hh  Timestep.hh  Window.hh
Fenix/include/Fenix/Events/: ApplicationEvent.hh  Event.hh  KeyEvent.hh  MouseEvent.hh
Fenix/include/Fenix/ImGui/: ImGuiLayer.hh
Fenix/include/Fenix/Renderer/: Buffer.hh  Camera.hh  CameraController.hh  Framebuffer.hh  GraphicsContext.hh  RenderCommand.hh  Renderer.hh  Renderer2D.hh  RendererAPI.hh  Shader.hh  Texture.hh  VertexArray.hh
Fenix/include/Fenix/Scene/: Components.hh  Entity.hh  Scene.hh  SceneCamera.hh  ScriptableEntity.hh
Fenix/include/Platform/Linux/: LinuxWindow.hh
Fenix/include/Platform/OpenGL/: OpenGLBuffer.hh  OpenGLContext.hh  OpenGLFramebuffer.hh  OpenGLRendererAPI.hh  OpenGLShader.hh  OpenGLTexture.hh  OpenGLVertexArray.hh
Fenix/include/fenix/: fenix.hh
Fenix/include/fenix/core/: application.hh  base.hh  entry_point.hh  input.hh  key_codes.hh  layer.hh  layer_stack.hh  log.hh  mouse_codes.hh  timer.hh  timestep.hh  window.hh
Fenix/include/fenix/events/: application_event.hh  event.hh  key_event.hh  mouse_event.hh
Fenix/include/fenix/gui/: imgui_layer.hh
Fenix/include/fenix/renderer/: buffer.hh  camera_controller.hh  framebuffer.hh  render_command.hh  renderer.hh  renderer_2D.hh  renderer_API.hh  shader.hh  texture.hh  vertex_array.hh
Fenix/include/fenix/scene/: components.hh  entity.hh  scene.hh  scene_camera.hh  scene_serializer.hh  scriptable_entity.hh
Fenix/include/fenix/util/: instrumentor.hh  platform_utils.hh
Fenix/include/platform/: platform_detection.hh
Fenix/include/platform/linux/: linux_window.hh
Fenix/include/platform/opengl/: opengl_buffer.hh  opengl_context.hh  opengl_framebuffer.hh  opengl_renderer_API.hh  opengl_shader.hh  opengl_texture.hh  opengl_vertex_array.hh
Fenix/src/: Application.cc  Buffer.cc  Camera.cc  CameraController.cc  Entity.cc  Framebuffer.cc  ImGuiLayer.cc  Layer.cc  LayerStack.cc  LinuxInput.cc  LinuxWindow.cc  Log.cc  OpenGLBuffer.cc  OpenGLContext.cc  OpenGLFramebuffer.cc  OpenGLRendererAPI.cc  OpenGLShader.cc  OpenGLTexture.cc  OpenGLVertexArray.cc  RenderCommand.cc  Renderer.cc  Renderer2D.cc  RendererAPI.cc  Scene.cc  SceneCamera.cc  Shader.cc  Texture.cc  VertexArray.cc  application.cc  buffer.cc  camera.cc  camera_controller.cc  entity.cc  framebuffer.cc  imgui_layer.cc  layer_stack.cc  linux_input.cc  linux_window.cc  log.cc  opengl_buffer.cc  (+17 more)
cmake/: BuildTypeSettings.cmake  CompilerWarnings.cmake  Config_build_type.cmake  Ide.cmake  ManageSubmod.cmake  PreventInSourceBuilds.cmake  ProjectSettings.cmake  Util.cmake  functions.cmake  misc.cmake
docs/: CHANGELOG.md  CMakeLists.txt  DarkTheme.css  Doxyfile.in  overview.md
examples/: CMakeLists.txt
examples/assets/shaders/: flat_color.frag  flat_color.glsl  flat_color.vert  texture.frag  texture.glsl  texture.vert  texture_and_color.glsl  triangle.frag  triangle.glsl  triangle.vert
examples/res/shaders/: triangle.frag
examples/src/: Random.hh  Sandbox2D.cc  Sandbox2D.hh  SandboxApp.cc  Utility.hh  sandbox.cc
include/: Firefly.hh
include/Fenix/: Fenix.hh  version.hh
include/Fenix/Core/: Application.hh  Base.hh  EntryPoint.hh  Layer.hh  LayerStack.hh  Timestep.hh
include/Fenix/Events/: ApplicationEvent.hh
include/Fenix/ImGui/: ImGuiLayer.hh
include/Fenix/Renderer/: Buffer.hh  Camera.hh  CameraController.hh  Framebuffer.hh  RenderCommand.hh  Renderer2D.hh  RendererAPI.hh  Texture.hh  VertexArray.hh
include/Firefly/: Base.hh  EntryPoint.hh  Firefly.hh  PlatformDetection.hh
include/Firefly/Core/: Application.hh  ImGuiLayer.hh  Layer.hh  LayerStack.hh  Log.hh  Window.hh
include/Firefly/Util/: Camera.hh
include/Hazel/: Base.hh  EntryPoint.hh  Hazel.hh  version.hh
include/Hazel/Core/: Application.hh  Base.hh  ImGuiLayer.hh  Input.hh  KeyCodes.hh  Layer.hh  MouseCodes.hh  Timestep.hh  Window.hh
include/Hazel/Events/: Event.hh  KeyEvent.hh  MouseEvent.hh
include/Hazel/ImGui/: ImGuiLayer.hh
include/Hazel/Renderer/: Buffer.hh  Camera.hh  CameraController.hh  GraphicsContext.hh  RenderCommand.hh  Renderer.hh  RendererAPI.hh  Shader.hh  (+2 more)
include/Platform/: PlatformDetection.hh
opengl-Firefly/: CMakeLists.txt
opengl-Prelude/: CMakeLists.txt
opengl-Sandbox/: CMakeLists.txt
scripts/: gen-project.bat  gen-project.sh  version.py
src/: Application.cc  Buffer.cc  CMakeLists.txt  Camera.cc  CameraController.cc  Framebuffer.cc  ImGuiLayer.cc  Layer.cc  LayerStack.cc  LinuxInput.cc  LinuxWindow.cc  Log.cc  OpenGLBuffer.cc  OpenGLContext.cc  OpenGLRendererAPI.cc  OpenGLShader.cc  OpenGLTexture.cc  OpenGLVertexArray.cc  RenderCommand.cc  Renderer.cc  Renderer2D.cc  RendererAPI.cc  Shader.cc  Texture.cc  VertexArray.cc  main.cc
src/Firefly-Core/: Application.cc  Application.hh  Base.hh  EntryPoint.hh  ImGuiLayer.cc  Layer.cc  Layer.hh  LayerStack.cc  LayerStack.hh  LinuxWindow.cc  LinuxWindow.hh  Log.cc  Log.hh  Window.hh
src/Firefly-Core/Events/: Event.hh  MouseEvent.hh
src/Firefly-Core/Platform/: LinuxWindow.cc  LinuxWindow.hh
src/Firefly-Util/: Camera.cc  DisplayManager.hh  IndexBuffer.hh  ResourceManager.cc  ResourceManager.hh  Shader.cc  Shader.hh  VertexBuffer.cc  VertexBuffer.hh  debug_context.cc  debug_context.h
src/Hazel-Util/: DisplayManager.cc  IndexBuffer.cc  box.cc
src/OpenGL/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/test/: main.cpp
(+18 files in other folders)
